--- a/app/styles/project/project/project.module.css
+++ b/app/styles/project/project/project.module.css
@@ -23,10 +23,14 @@
     justify-content: space-between;
 
 }
+
+.top h2{
+    color: #1B9392;
+    font-size: 22px;
+}
 .deliverablesManager .top h2{
     font-size: 24px;
-    /* margin-left: 10px; */
-}
+ }
 
 /* Deliverable Edit button styles */
 .deliverable-editButton {
@@ -89,7 +93,73 @@
 }
 
 
+.milestoneContainer{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 22px;
+    padding-top: 12px;
+}
 
+.milestone {
+    background-color: #C6E7E7;
+    border-radius: 0.5rem; /* rounded-lg */
+    padding: 1rem;         /* p-4 */
+    width: 320px;
+    height: 200px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* shadow-md */
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s; 
+    position: relative;
+}
+
+.h3{
+    text-transform: capitalize;
+    font-size: 1.25rem;       /* text-xl */
+    font-weight: 600;         /* font-semibold */
+    color: #1B9392;
+     border-bottom: 2px solid black; /* Custom underline */
+    padding-bottom: 1px;      
+}
+
+.detail{
+    display: flex;
+    flex-direction: column;  
+    gap: 0.25rem;            
+    margin-top: 0.5rem;      
+    color: #1B9392; 
+}
+
+
+
+.drop {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    margin-top: 2px;
+    width: 80px;
+    background-color: #ffffff;
+    border: 1px solid #e5e7eb;
+    border-radius: 6px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+  }
+
+
+.iconButton {
+    position: absolute;
+    top: 0.8rem;
+    right: 0.8rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    color: black;
+    padding: 0.25rem;
+    transition: transform 0.2s ease;
+}
+
+
+ 
 .deliverablesTable td button.deleteButton {
     background-color: #ff4d4f;
     color: #1a253a;
@@ -140,6 +210,7 @@
 
 .projectDropdown {
     margin-right: auto;
+    
    
 }
 .milestoneButton{
@@ -177,12 +248,11 @@
 
 
 .img {
-    width: 40%;
-    max-width: 500px;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-    border-radius: 12px;
+    width: 130px;
+     height: 130px;
+    /* display: block; */
+    /* margin: 0 auto; */
+    border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   }
 
@@ -247,6 +317,7 @@
 .projectDetails {
     display: flex;
     flex-direction: column;
+    /* margin-left: -200px; */
     /* flex-wrap: wrap; */
     /* gap: 20px; */
 }
@@ -354,7 +425,7 @@
     display: inline-flex;
     align-items: center;
     padding: 10px 20px;
-    background-color: #1e90ff;
+    background-color: #ff7211;
     color: white;
     border: none;
     border-radius: 4px;
@@ -364,9 +435,30 @@
 }
 
 .addButton:hover {
-    background-color: #1c86ee;
+    background-color: #ff7211;
 }
 
+
+.addBtn{
+    display: inline-flex;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #ff7211;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
+    transition: background-color 0.3s;
+    margin-right: 20px;
+}
+
+.addBtn:hover {
+    background-color: #d85e0b;
+}
+
+
+ 
 .inputField {
     width: 100%;
     padding: 10px;
@@ -1305,8 +1397,10 @@
 
 .modalActions {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     margin-top: 20px;
+    margin-left:170px;
+    gap: 10px;
 }
 
 .closeButton1 {
@@ -1316,7 +1410,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    /* width:50%; */
+    /* margin-right: 12px; */
 }
 
 .closeButton1:hover {
@@ -1542,7 +1636,8 @@
 .cardContent {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    gap: 60px;
     height: 100%; 
 }
 
@@ -1559,4 +1654,14 @@
 .card p {
     font-size: 16px;
     margin: 0;
+}
+
+
+
+.card h3{
+    /* color: black; */
+}
+
+.card h3 span {
+    color: #1B9392;
 }
