--- a/app/styles/students/Student.module.css
+++ b/app/styles/students/Student.module.css
@@ -109,7 +109,7 @@
     width: 100%;
     border-collapse: collapse;
     background: white;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
