--- a/app/styles/students/addStudent/addStudent.module.css
+++ b/app/styles/students/addStudent/addStudent.module.css
@@ -114,7 +114,7 @@
 }
 
 .addCohortButton:hover, .submitButton:hover {
-  background-color: #c6e7e7;
+  background-color: #1b9392;
 }
 
 /* To center buttons in a row */
