--- a/app/styles/card/card.module.css
+++ b/app/styles/card/card.module.css
@@ -71,3 +71,9 @@
 .color4 {
   background-color: #1b9392;
 }
+.color1 .color3 :hover {
+  background-color: #1b9392;
+}
+.color2 .color4{
+  background-color: #ff7211;
+}
