--- a/app/styles/documents/uploadDropdown.module.css
+++ b/app/styles/documents/uploadDropdown.module.css
@@ -25,19 +25,19 @@
 .dropdownItem {
     padding: 10px;
     border: none;
-    background: none;
+    background: #C6E7E7 ;
     text-align: left;
     font-size: 14px;
     cursor: pointer;
     display: flex;
     align-items: center;
     gap: 10px;
-    color: #333;
+    color: #000000;
 }
 
 .addButton {
     align-self: flex-start;
-    background-color: #007bff;
+    background-color: #ff7211;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -51,5 +51,24 @@
 }
 
 .addButton:hover {
-    background-color: #0056b3;
+    background-color: #1b9392;
+}
+.uploadFileButton {
+    background: #C6E7E7;
+}
+
+.uploadFileButton:hover {
+    background: #ff7211;
+    color: white;
+}
+
+.uploadFileButton:active {
+    background: #ff4e00; /* Change to a darker shade for active state */
+    color: white;
+}
+
+/* Button when clicked */
+.uploadFileButton:focus {
+    outline: none; /* Optional: remove outline on click */
+    background-color: #ff4e00; /* Active color */
 }
