--- a/app/styles/project/navbar/navbar.module.css
+++ b/app/styles/project/navbar/navbar.module.css
@@ -44,9 +44,9 @@
   } */
   
   .navLinks button {
-    background: none;
+    background:#ff7211;
     border: none;
-    color: white;
+    color: #000000;
     cursor: pointer;
     font-size: 1rem;
     padding: 0.5rem 1rem;
@@ -56,11 +56,11 @@
   }
   
   .navLinks button:hover {
-    background-color: #1e90ff;
+    background-color: #1b9392;
   }
   
   .navLinks .active {
-    background-color: #1e90ff;
+    background-color: #c6e7e7;
   }
 
   .active {
@@ -99,7 +99,7 @@
     border: none;
     font-size: 16px;
     cursor: pointer;
-    color: #007bff;
+    color: #1b9392;
     margin-right: auto;
   }
   
