--- a/app/styles/students/addStudent/facilitators.module.css
+++ b/app/styles/students/addStudent/facilitators.module.css
@@ -36,7 +36,7 @@
     width: 100%;
     border-collapse: collapse;
     background: white;
-    border-radius: 8px;
+    /*border-radius: 8px;*/
     overflow: hidden;
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
     margin-top: 20px;
