--- a/app/styles/students/singleStudent/sStudent.module.css
+++ b/app/styles/students/singleStudent/sStudent.module.css
@@ -447,3 +447,39 @@
   font-weight: bold;
   font-size: 20px;
 }
+
+.studentTable {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 50px;
+  font-size: 16px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+
+  overflow: hidden;
+}
+
+.studentTable thead {
+  background-color: #1b9392;
+  color: #333;
+  text-align: left;
+}
+
+.studentTable th,
+.studentTable td {
+  padding: 12px 16px;
+  border-bottom: 1px solid #eee;
+}
+
+.studentTable th {
+  font-weight: 600;
+}
+
+.studentTable tbody tr:hover {
+  background-color: #f0f0f0;
+  transition: 0.3s ease;
+}
+
+.studentTable td {
+  color: #000000;
+}
