--- a/app/styles/supplier/addSupplier.module.css
+++ b/app/styles/supplier/addSupplier.module.css
@@ -122,6 +122,7 @@
 }
 
 .modalContent {
+
     background-color: #c6e7e7;
     padding: 2rem;
     border-radius: 10px;
@@ -202,6 +203,7 @@
     display: flex;
     justify-content: flex-end;
     margin-top: 1rem;
+    gap: 8px;
 }
 
 .button {
@@ -228,6 +230,16 @@
     border-radius: 8px;
     margin-bottom: 1.5rem;
     text-align: center;
+}
+.buttons{
+    padding: 0.75rem 2rem;
+    background-color: #ff0000;
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 @media (max-width: 768px) {
