--- a/app/styles/action/actionButton.module.css
+++ b/app/styles/action/actionButton.module.css
@@ -4,7 +4,7 @@
   }
   
   .actionButton {
-    background-color: #007bff;
+    background-color: #1b9392;
     color: white;
     padding: 8px 16px;
     border: none;
@@ -15,7 +15,7 @@
   }
   
   .actionButton:hover {
-    background-color: #0056b3;
+    background-color: #156f6e;
   }
   
   .dropdownMenu {
