--- a/app/styles/dashboards/project/dashboard.module.css
+++ b/app/styles/dashboards/project/dashboard.module.css
@@ -1,8 +1,7 @@
 .container {
   display: flex;
   padding: 0;
- 
- 
+  
  }
 
 .menu {
@@ -14,6 +13,9 @@
 .content {
   flex: 4;
   padding: 20px;
+  margin-left: -30px;
+  margin-top: 1px;
+
 }
 
 .wrapper {
