--- a/app/styles/card/card.module.css
+++ b/app/styles/card/card.module.css
@@ -6,6 +6,8 @@
   gap: 20px;
   cursor: pointer;
   width: 100%;
+  display: flex;
+  height: 150px;
 }
 .cardContainer {
   display: flex;
@@ -14,14 +16,14 @@
   padding: 20px;
 }
 
-/*.container {*/
-/*  background: #f8f9fa;*/
-/*  padding: 20px;*/
-/*  border-radius: 8px;*/
-/*  text-align: center;*/
-/*  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);*/
-/*  width: 200px;*/
-/*}*/
+/* .container {
+ background: #f8f9fa;
+ padding: 20px;
+ border-radius: 8px;
+ text-align: center;
+ box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+  width: 200px;
+} */
 
 .container:hover{
   background-color: #000000;
@@ -64,7 +66,7 @@
 }
 
 .color3 {
-  background-color: #000000;
+  background-color: #1b9392;
 }
 
 .color4 {
