--- a/app/styles/chart/chart.module.css
+++ b/app/styles/chart/chart.module.css
@@ -1,10 +1,11 @@
 .container {
-  height: 200px;
+  height: 300px;
   background-color: #f3f3f3;
   padding: 20px;
   border-radius: 10px;
-  width: 350px;
+  width: 48%;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  margin-left: 20px;
 }
 
 /* Medium screens (tablets, 768px and below) */
