--- a/app/styles/project/project/milestone.module.css
+++ b/app/styles/project/project/milestone.module.css
@@ -81,14 +81,15 @@
 
 .iconButton {
     position: absolute;
-    top: 0.8rem;
-    right: 0.8rem;
+    top: -5px;
+    right: -5px;
     background: transparent;
     border: none;
     cursor: pointer;
     color: black;
     padding: 0.25rem;
     transition: transform 0.2s ease;
+    
 }
 
 .icon {
@@ -123,4 +124,125 @@
     gap: 0.25rem;            
     margin-top: 0.5rem;      
     color: #1B9392; 
+}
+
+
+.menuOptions {
+    position: absolute;
+    background-color: white;
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 0.5rem 0;
+    width: 75px;
+    display: flex;
+    flex-direction: column;
+     right: 0;
+     top: -12px;
+   }
+  
+  .menuOptions button {
+    background: none;
+    border: none;
+    padding: 3px;
+    text-align: center;
+    width: 100%;
+    font-size: 0.95rem;
+    color: #1B9392;
+    cursor: pointer;
+    transition: background 0.2s ease;
+  }
+  
+  .menuOptions button:hover {
+    background-color: #f0f0f0;
+  }
+  
+
+  .modalOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+ 
+}
+
+.modalContent {
+    /* background: #ffffff; */
+    padding: 28px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 400px;
+    text-align: center;
+    background-color: #C6E7E7;
+
+}
+
+.modalContent h3{
+    color:#1B9392;
+    font-size: 20px;
+    font-weight: 500;
+}
+.modalContent .divInput {
+    display: flex;
+    flex-direction: column;
+}
+.modalContent .divInput label{
+    color: #1B9392;
+    justify-content: flex-start;
+    align-self: flex-start;
+    margin-top:10px;
+}
+
+
+.modalActions {
+    display: flex;
+    /* justify-content: space-between; */
+    margin-top: 20px;
+    margin-left:170px;
+    gap: 10px;
+}
+
+.closeButton1 {
+    background-color: #ff7211;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    /* margin-right: 12px; */
+}
+
+.closeButton1:hover {
+    background-color: #cc5b0e;
+}
+.closeButton:hover {
+    background-color: #e53935;
+}
+
+.addButton1{
+    background-color: #1B9392;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.addButton:hover {
+    background-color: #43a047;
+}
+
+.inputField {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    color: #1B9392;
 }
