--- a/app/styles/project/project/milestone.module.css
+++ b/app/styles/project/project/milestone.module.css
@@ -164,6 +164,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    backdrop-filter: blur(8px); /* This blurs the background */
     background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
@@ -229,6 +230,15 @@
     background-color: #1B9392;
     color: white;
     padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.addButtons1{
+    background-color: #1B9392;
+    color: white;
+    padding: 5px 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
