--- a/app/styles/supplier/UpdateSupplierPopup.module.css
+++ b/app/styles/supplier/UpdateSupplierPopup.module.css
@@ -223,8 +223,8 @@
     padding: 10px 12px;
     border-radius: 8px;
 }
-.buttons{
-    background-color: #ff0000;
+.button{
+    background-color: #ff7211;
     padding: 10px 12px;
     border-radius: 8px;
 }
