--- a/app/styles/project/project/project.module.css
+++ b/app/styles/project/project/project.module.css
@@ -35,7 +35,7 @@
 }
 
 .deliverable-editButton:hover {
-    background-color: #45a049; /* Darker green on hover */
+    background-color: #1b9392; /* Darker green on hover */
     transform: scale(1.05); /* Slight zoom effect */
 }
 
@@ -451,14 +451,14 @@
     transition: color 0.2s;
 }
 .editIcon {
-    color: green;
+    color: #ff7211;
 }
 
 .deleteIcon {
     color: #ff4d4f;
 }
 .editIcon:hover {
-    color: #1e90ff;
+    color: #c6e7e7;
 }
 
 .deleteIcon:hover {
@@ -552,12 +552,12 @@
 }
 
 .editButton {
-    background-color: #1e90ff;
+    background-color: #ff7211;
     color: white;
 }
 
 .editButton:hover {
-    background-color: #1c86ee;
+    background-color: #c6e7e7;
 }
 
 /* .deleteButton {
@@ -598,7 +598,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #4caf50;
+    background-color: #ff7211;
     color: white;
     padding: 12px;
     font-size: 16px;
@@ -609,7 +609,7 @@
 }
 
 .primaryButton:hover {
-    background-color: #45a049;
+    background-color: #c6e7e7;
 }
 
 .primaryButton:active {
@@ -627,7 +627,7 @@
     align-items: center;
     gap: 8px;
     padding: 10px 20px;
-    background-color: #1e90ff;
+    background-color: #ff7211;
     color: white;
     border: none;
     border-radius: 4px;
@@ -640,7 +640,7 @@
 }
 
 .toggleButton:hover {
-    background-color: #1c86ee;
+    background-color: #c6e7e7;
     transform: scale(1.05);
 }
 
@@ -673,7 +673,7 @@
 .downloadButton {
     margin-top: 10px;
     padding: 8px 12px;
-    background-color: #4CAF50;
+    background-color: #ff7211;
     color: white;
     border: none;
     border-radius: 4px;
@@ -681,7 +681,7 @@
 }
 
 .downloadButton:hover {
-    background-color: #45a049;
+    background-color: #c6e7e7;
 }
 
 .phaseInfoRow {
@@ -700,7 +700,7 @@
 }
 
 .updateButton {
-    background-color: #4caf50;
+    background-color: #ff7211;
     color: white;
     border: none;
     padding: 8px 12px;
@@ -710,7 +710,7 @@
 }
 
 .updateButton:hover {
-    background-color: #45a049;
+    background-color: #c6e7e7;
 }
 
 
@@ -1221,7 +1221,7 @@
 
 .addButton {
     align-self: flex-start;
-    background-color: #007bff;
+    background-color: #ff7211;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -1236,7 +1236,7 @@
 }
 
 .addButton:hover {
-    background-color: #0056b3;
+    background-color: #c6e7e7;
 }
 
 .modalOverlay {
@@ -1303,7 +1303,7 @@
 }
 
 .addButton1{
-    background-color: #4caf50;
+    background-color: #ff7211;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -1312,7 +1312,7 @@
 }
 
 .addButton:hover {
-    background-color: #43a047;
+    background-color: #c6e7e7;
 }
 
 
@@ -1456,7 +1456,7 @@
     transition: color 0.2s;
 }
 .successMessage {
-    background-color: #4CAF50;
+    background-color: #1b9392;
     color: white;
     padding: 15px;
     margin-bottom: 20px;
@@ -1507,7 +1507,7 @@
 }
 
 .card {
-    background-color: #1a253a;
+    background-color: #1b9392;
     color: white;
     border-radius: 10px;
     padding: 20px;
