--- a/app/styles/dashboards/dashboard.module.css
+++ b/app/styles/dashboards/dashboard.module.css
@@ -17,19 +17,19 @@
 
 .content {
   width: 100%;
-  padding: 20px;
+  padding: 15px;
   margin-top: 10px;
   /* display: grid; */
   grid-template-columns: repeat(2, 1fr);
 }
 
 
-.wrapper {
+/* .wrapper {
   display: flex;
-  gap: 10px; /* Reduce space */
+  gap: 10px; 
   margin-right: 0;
   width:auto;
-}
+} */
 
 
 .main {
@@ -38,8 +38,19 @@
   flex-direction: column;
   gap: 20px;
 }
-
-
+.studentMain{
+  display: flex;
+  flex-direction: column;
+  flex: 5;
+  gap: 20px;
+  margin: auto;
+  height: 100%;
+}
+@media (min-width: 768px) {
+  .studentMain {
+    grid-template-columns: repeat(3, minmax(0, 1fr)); /* Ensures equal width */
+  }
+}
 .cards {
   display: flex;
   gap: 20px;
@@ -47,7 +58,14 @@
   /*height: 100px;*/
 }
 
-
+.view {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  margin-left: 20px;
+  margin-right: 10px;
+}
 .card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -92,13 +110,6 @@
   gap: 200px;
   margin-top: 20px;
 }
-
-
-.side {
-  flex: 1;
-}
-
-
 .calendarContainer {
   margin-top: 20px;
   padding: 10px;
@@ -164,3 +175,28 @@
   }
 } 
   */
+
+  .wrapper {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+  
+  /* Main dashboard content */
+  /* .studentMain {
+    flex: 5;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  } */
+  
+  /* Rightbar container */
+  .side {
+    position: sticky;
+    flex: 1;
+    display: block;
+    height: 50%;
+    border-radius: 10px;
+    padding: 10px;
+  }
+  
