--- a/app/styles/project/navbar/navbar.module.css
+++ b/app/styles/project/navbar/navbar.module.css
@@ -99,7 +99,7 @@
     border: none;
     font-size: 16px;
     cursor: pointer;
-    color: #007bff;
+    color: #1B9392;
     margin-right: auto;
   }
   
