--- a/app/styles/project/project/project.module.css
+++ b/app/styles/project/project/project.module.css
@@ -347,8 +347,9 @@
     /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); */
     flex: 1 1 300px;
     /* margin-left: 20px; */
-    margin-right:18px;
+    margin-left:23px;
     margin-top: 10px;
+
 }
 
 .card h2 {
@@ -1366,6 +1367,7 @@
 }
 
 .modalContent {
+    position: relative;
     /* background: #ffffff; */
     padding: 28px;
     border-radius: 8px;
@@ -1412,21 +1414,23 @@
     margin-top: 20px;
     margin-left:170px;
     gap: 10px;
-}
+ }
 
 .closeButton1 {
-    background-color: #ff7211;
-    color: white;
-    padding: 10px 20px;
+    top: 20px;
+    right: 20px;
+    position: absolute;
+    /* background-color: #ff7211; */
+    color: #ff7211;
+    /* padding: 10px 20px; */
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    /* margin-right: 12px; */
-}
+ }
 
-.closeButton1:hover {
+/* .closeButton1:hover {
     background-color: #cc5b0e;
-}
+} */
 .closeButton:hover {
     background-color: #e53935;
 }
@@ -1435,6 +1439,7 @@
     background-color: #1B9392;
     color: white;
     padding: 10px 20px;
+    margin-left: 100px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
