--- a/app/styles/project/project/milestone.module.css
+++ b/app/styles/project/project/milestone.module.css
@@ -129,7 +129,7 @@
 
 .menuOptions {
     position: absolute;
-    background-color: white;
+    background-color: #C6E7E7;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
